--- a/YAMKC.vcxproj
+++ b/YAMKC.vcxproj
@@ -148,12 +148,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Kart.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Obj.cpp" />
     <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Color.hpp" />
+    <ClInclude Include="Kart.hpp" />
     <ClInclude Include="Obj.hpp" />
     <ClInclude Include="Shape.hpp" />
     <ClInclude Include="Texture.hpp" />
