Move icon file.

--- a/YAMKC.vcxproj
+++ b/YAMKC.vcxproj
@@ -180,7 +180,7 @@
     <ResourceCompile Include="Resources\YAMKC.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="icon.ico" />
+    <Image Include="Resources\icon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
